--- a/views/signout.ejs
+++ b/views/signout.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Signout</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="signout">
+      <h1 style="color: white;">您已登出</h1>
+    </div>
   </body>
 </html>
