--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,67 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html, body {
+  width: 100%;
+  height: 100%;
 }
 
-a {
-  color: #00B7FF;
+body {
+  background-image: radial-gradient(#7AFFAF, #7A88FF);
+}
+
+.main{
+	text-align: center;
+	background-color: #fff;
+	border-radius: 20px;
+	width: 400px;
+	height: 600px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+}
+
+.signout{
+  position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+}
+
+.loading{
+	width: 80px;
+	height: 40px;
+	margin: 0 auto;
+	margin-top:100px;
+}
+.loading span{
+	display: inline-block;
+	width: 8px;
+	height: 100%;
+	border-radius: 4px;
+	background: lightgreen;
+	-webkit-animation: load 1.04s ease infinite;
+}
+
+@-webkit-keyframes load{
+	0%,100%{
+		height: 40px;
+		background: lightgreen;
+	}
+	50%{
+		height: 60px;
+		margin-top: -20px;
+		background: lightblue;
+	}
+}
+
+.loading span:nth-child(2){
+	-webkit-animation-delay:0.13s;
+}
+.loading span:nth-child(3){
+	-webkit-animation-delay:0.26s;
+}
+.loading span:nth-child(4){
+	-webkit-animation-delay:0.39s;
+}
+.loading span:nth-child(5){
+	-webkit-animation-delay:0.52s;
 }
