--- a/views/sso.ejs
+++ b/views/sso.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="main">
-      <h1>扫码登陆</h1>
+      <h1>扫码登录</h1>
       <h3>请使用手机版钉钉</h3>
       <div id="login_container"></div>
       <div id="loading" class="loading" hidden="true">
