support mini app

--- a/views/signout.ejs
+++ b/views/signout.ejs
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Signout</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-  <body>
-    <div class="signout">
-      <h1 style="color: white;">您已登出</h1>
+  <body class="bg">
+    <div class="center">
+      <h1 style="color: white">您已登出</h1>
     </div>
   </body>
 </html>
