--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
-html, body {
-  width: 100%;
-  height: 100%;
+html, body{
+	width: 100%;
+	height: 100%;
 }
-
-body {
-  background-image: radial-gradient(#7AFFAF, #7A88FF);
+  
+.bg{
+	background-image: radial-gradient(#7AFFAF, #7A88FF);
 }
 
 .main{
@@ -19,7 +19,7 @@ body {
 	transform: translate(-50%,-50%);
 }
 
-.signout{
+.center{
   position: absolute;
 	left: 50%;
 	top: 50%;
